FIX: gap & bottom margin of pokemon types

--- a/styles.css
+++ b/styles.css
@@ -79,10 +79,10 @@ body {
   height: 30px;
   width: 100%;
   display: flex;
-  gap: 10px;
+  gap: 5px;
   align-items: center;
-  padding-left: 5px;
-  padding-bottom: 5px;
+  margin-left: 5px;
+  margin-bottom: 5px;
 }
 
 .types {
